--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# --- TeX --- #
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -300,5 +302,28 @@ TSWLatexianTemp*
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
 
-# MacOS
-.DS_Store
+
+# --- MacOS --- #
+*.DS_Store
+
+
+# --- GitHubPages --- #
+
+# This .gitignore is appropriate for repositories deployed to GitHub Pages and using
+# a Gemfile as specified at https://github.com/github/pages-gem#conventional
+
+# Basic Jekyll gitignores (synchronize to Jekyll.gitignore)
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+# Additional Ruby/bundler ignore for when you run: bundle install
+/vendor
+
+# Specific ignore for GitHub Pages
+# GitHub Pages will always use its own deployed version of pages-gem
+# This means GitHub Pages will NOT use your Gemfile.lock and therefore it is
+# counterproductive to check this file into the repository.
+# Details at https://github.com/github/pages-gem/issues/768
+Gemfile.lock
